Motif_Athena_Package/include_C/Xlib.h


typedef unsigned long wchar_t;
typedef struct {
	XExtData *ext_data;	
	struct _XDisplay *display;
	Window root;		
	int width, height;	
	int mwidth, mheight;	
	int ndepths;		
	Depth *depths;		
	int root_depth;		
	Visual *root_visual;	
	GC default_gc;		
	Colormap cmap;		
	unsigned long white_pixel;
	unsigned long black_pixel;	
	int max_maps, min_maps;	
	int backing_store;	
	Bool save_unders;
	long root_input_mask;	
} Screen;
typedef struct {
    short x, y;
    unsigned short width, height;
} XRectangle;
typedef struct _XDisplay Display;
struct _XrmHashBucketRec;
typedef XKeyEvent XKeyPressedEvent;
typedef union _XEvent {
        int type;		
	XAnyEvent xany;
	XKeyEvent xkey;
	XButtonEvent xbutton;
	XMotionEvent xmotion;
	XCrossingEvent xcrossing;
	XFocusChangeEvent xfocus;
	XExposeEvent xexpose;
	XGraphicsExposeEvent xgraphicsexpose;
	XNoExposeEvent xnoexpose;
	XVisibilityEvent xvisibility;
	XCreateWindowEvent xcreatewindow;
	XDestroyWindowEvent xdestroywindow;
	XUnmapEvent xunmap;
	XMapEvent xmap;
	XMapRequestEvent xmaprequest;
	XReparentEvent xreparent;
	XConfigureEvent xconfigure;
	XGravityEvent xgravity;
	XResizeRequestEvent xresizerequest;
	XConfigureRequestEvent xconfigurerequest;
	XCirculateEvent xcirculate;
	XCirculateRequestEvent xcirculaterequest;
	XPropertyEvent xproperty;
	XSelectionClearEvent xselectionclear;
	XSelectionRequestEvent xselectionrequest;
	XSelectionEvent xselection;
	XColormapEvent xcolormap;
	XClientMessageEvent xclient;
	XMappingEvent xmapping;
	XErrorEvent xerror;
	XKeymapEvent xkeymap;
	XGenericEvent xgeneric;
	XGenericEventCookie xcookie;
	long pad[24];
} XEvent;
typedef struct {
    short	lbearing;	
    short	rbearing;	
    short	width;		
    short	ascent;		
    short	descent;	
    unsigned short attributes;	
} XCharStruct;
typedef struct {
    XExtData	*ext_data;	
    Font        fid;            
    unsigned	direction;	
    unsigned	min_char_or_byte2;
    unsigned	max_char_or_byte2;
    unsigned	min_byte1;	
    unsigned	max_byte1;	
    Bool	all_chars_exist;
    unsigned	default_char;	
    int         n_properties;   
    XFontProp	*properties;	
    XCharStruct	min_bounds;	
    XCharStruct	max_bounds;	
    XCharStruct	*per_char;	
    int		ascent;		
    int		descent;	
} XFontStruct;
typedef struct {		
    unsigned char byte1;
    unsigned char byte2;
} XChar2b;
typedef struct {
    XRectangle      max_ink_extent;
    XRectangle      max_logical_extent;
} XFontSetExtents;
typedef struct _XOM *XOM;
typedef struct _XOC *XOC, *XFontSet;
typedef struct {
    char           *chars;
    int             nchars;
    int             delta;
    XFontSet        font_set;
} XmbTextItem;
typedef struct {
    wchar_t        *chars;
    int             nchars;
    int             delta;
    XFontSet        font_set;
} XwcTextItem;
typedef struct _XIM *XIM;
typedef struct _XIC *XIC;
extern int XTextExtents(
    XFontStruct*	,
     char*	,
    int			,
    int*		,
    int*		,
    int*		,
    XCharStruct*	
);
extern int XTextExtents16(
    XFontStruct*	,
     XChar2b*	,
    int			,
    int*		,
    int*		,
    int*		,
    XCharStruct*	
);
extern int XTextWidth(
    XFontStruct*	,
     char*	,
    int			
);
extern int XTextWidth16(
    XFontStruct*	,
     XChar2b*	,
    int			
);
extern Bool XTranslateCoordinates(
    Display*		,
    Window		,
    Window		,
    int			,
    int			,
    int*		,
    int*		,
    Window*		
);
extern int XUndefineCursor(
    Display*		,
    Window		
);
extern int XUngrabButton(
    Display*		,
    unsigned int	,
    unsigned int	,
    Window		
);
extern int XUngrabKey(
    Display*		,
    int			,
    unsigned int	,
    Window		
);
extern int XUngrabKeyboard(
    Display*		,
    Time		
);
extern int XUngrabPointer(
    Display*		,
    Time		
);
extern int XUngrabServer(
    Display*		
);
extern int XUninstallColormap(
    Display*		,
    Colormap		
);
extern int XUnloadFont(
    Display*		,
    Font		
);
extern int XUnmapSubwindows(
    Display*		,
    Window		
);
extern int XUnmapWindow(
    Display*		,
    Window		
);
extern int XVendorRelease(
    Display*		
);
extern int XWarpPointer(
    Display*		,
    Window		,
    Window		,
    int			,
    int			,
    unsigned int	,
    unsigned int	,
    int			,
    int			
);
extern int XWidthMMOfScreen(
    Screen*		
);
extern int XWidthOfScreen(
    Screen*		
);
extern int XWindowEvent(
    Display*		,
    Window		,
    long		,
    XEvent*		
);
extern int XWriteBitmapFile(
    Display*		,
     char*	,
    Pixmap		,
    unsigned int	,
    unsigned int	,
    int			,
    int			
);
extern Bool XSupportsLocale (void);
extern char *XSetLocaleModifiers(
    const char*		
);
extern XOM XOpenOM(
    Display*			,
    struct _XrmHashBucketRec*	,
     char*		,
     char*		
);
extern Status XCloseOM(
    XOM			
);
extern char *XSetOMValues(
    XOM			,
    ...
) ;
extern char *XGetOMValues(
    XOM			,
    ...
) ;
extern Display *XDisplayOfOM(
    XOM			
);
extern char *XLocaleOfOM(
    XOM			
);
extern XOC XCreateOC(
    XOM			,
    ...
) ;
extern void XDestroyOC(
    XOC			
);
extern XOM XOMOfOC(
    XOC			
);
extern char *XSetOCValues(
    XOC			,
    ...
) ;
extern char *XGetOCValues(
    XOC			,
    ...
) ;
extern XFontSet XCreateFontSet(
    Display*		,
     char*	,
    char***		,
    int*		,
    char**		
);
extern void XFreeFontSet(
    Display*		,
    XFontSet		
);
extern int XFontsOfFontSet(
    XFontSet		,
    XFontStruct***	,
    char***		
);
extern char *XBaseFontNameListOfFontSet(
    XFontSet		
);
extern char *XLocaleOfFontSet(
    XFontSet		
);
extern Bool XContextDependentDrawing(
    XFontSet		
);
extern Bool XDirectionalDependentDrawing(
    XFontSet		
);
extern Bool XContextualDrawing(
    XFontSet		
);
extern XFontSetExtents *XExtentsOfFontSet(
    XFontSet		
);
extern int XmbTextEscapement(
    XFontSet		,
     char*	,
    int			
);
extern int XwcTextEscapement(
    XFontSet		,
     wchar_t*	,
    int			
);
extern int Xutf8TextEscapement(
    XFontSet		,
     char*	,
    int			
);
extern int XmbTextExtents(
    XFontSet		,
     char*	,
    int			,
    XRectangle*		,
    XRectangle*		
);
extern int XwcTextExtents(
    XFontSet		,
     wchar_t*	,
    int			,
    XRectangle*		,
    XRectangle*		
);
extern int Xutf8TextExtents(
    XFontSet		,
     char*	,
    int			,
    XRectangle*		,
    XRectangle*		
);
extern Status XmbTextPerCharExtents(
    XFontSet		,
     char*	,
    int			,
    XRectangle*		,
    XRectangle*		,
    int			,
    int*		,
    XRectangle*		,
    XRectangle*		
);
extern Status XwcTextPerCharExtents(
    XFontSet		,
     wchar_t*	,
    int			,
    XRectangle*		,
    XRectangle*		,
    int			,
    int*		,
    XRectangle*		,
    XRectangle*		
);
extern Status Xutf8TextPerCharExtents(
    XFontSet		,
     char*	,
    int			,
    XRectangle*		,
    XRectangle*		,
    int			,
    int*		,
    XRectangle*		,
    XRectangle*		
);
extern void XmbDrawText(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			,
    XmbTextItem*	,
    int			
);
extern void XwcDrawText(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			,
    XwcTextItem*	,
    int			
);
extern void Xutf8DrawText(
    Display*		,
    Drawable		,
    GC			,
    int			,
    int			,
    XmbTextItem*	,
    int			
);
extern void XmbDrawString(
    Display*		,
    Drawable		,
    XFontSet		,
    GC			,
    int			,
    int			,
     char*	,
    int			
);
extern void XwcDrawString(
    Display*		,
    Drawable		,
    XFontSet		,
    GC			,
    int			,
    int			,
     wchar_t*	,
    int			
);
extern void Xutf8DrawString(
    Display*		,
    Drawable		,
    XFontSet		,
    GC			,
    int			,
    int			,
     char*	,
    int			
);
extern void XmbDrawImageString(
    Display*		,
    Drawable		,
    XFontSet		,
    GC			,
    int			,
    int			,
     char*	,
    int			
);
extern void XwcDrawImageString(
    Display*		,
    Drawable		,
    XFontSet		,
    GC			,
    int			,
    int			,
     wchar_t*	,
    int			
);
extern void Xutf8DrawImageString(
    Display*		,
    Drawable		,
    XFontSet		,
    GC			,
    int			,
    int			,
     char*	,
    int			
);
extern XIM XOpenIM(
    Display*			,
    struct _XrmHashBucketRec*	,
    char*			,
    char*			
);
extern Status XCloseIM(
    XIM 
);
extern char *XGetIMValues(
    XIM , ...
) ;
extern char *XSetIMValues(
    XIM , ...
) ;
extern Display *XDisplayOfIM(
    XIM 
);
extern char *XLocaleOfIM(
    XIM 
);
extern XIC XCreateIC(
    XIM , ...
) ;
extern void XDestroyIC(
    XIC 
);
extern void XSetICFocus(
    XIC 
);
extern void XUnsetICFocus(
    XIC 
);
extern wchar_t *XwcResetIC(
    XIC 
);
extern char *XmbResetIC(
    XIC 
);
extern char *Xutf8ResetIC(
    XIC 
);
extern char *XSetICValues(
    XIC , ...
) ;
extern char *XGetICValues(
    XIC , ...
) ;
extern XIM XIMOfIC(
    XIC 
);
extern Bool XFilterEvent(
    XEvent*	,
    Window	
);
extern int XmbLookupString(
    XIC			,
    XKeyPressedEvent*	,
    char*		,
    int			,
    KeySym*		,
    Status*		
);
extern int XwcLookupString(
    XIC			,
    XKeyPressedEvent*	,
    wchar_t*		,
    int			,
    KeySym*		,
    Status*		
);