Motif_Athena_Package/include_C/Xlib.pp

function XTextExtents(para1:PXFontStruct; para2:Pchar; para3:longint; para4:Plongint; para5:Plongint; 
           para6:Plongint; para7:PXCharStruct):longint;cdecl;external;
{ font_struct  }{ string  }{ nchars  }{ direction_return  }{ font_ascent_return  }{ font_descent_return  }{ overall_return  }
function XTextExtents16(para1:PXFontStruct; para2:PXChar2b; para3:longint; para4:Plongint; para5:Plongint; 
           para6:Plongint; para7:PXCharStruct):longint;cdecl;external;
{ font_struct  }{ string  }{ count  }
function XTextWidth(para1:PXFontStruct; para2:Pchar; para3:longint):longint;cdecl;external;
{ font_struct  }{ string  }{ count  }
function XTextWidth16(para1:PXFontStruct; para2:PXChar2b; para3:longint):longint;cdecl;external;
{ display  }{ src_w  }{ dest_w  }{ src_x  }{ src_y  }{ dest_x_return  }{ dest_y_return  }{ child_return  }
function XTranslateCoordinates(para1:PDisplay; para2:TWindow; para3:TWindow; para4:longint; para5:longint; 
           para6:Plongint; para7:Plongint; para8:PWindow):TBool;cdecl;external;
{ display  }{ w  }
function XUndefineCursor(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ button  }{ modifiers  }{ grab_window  }
function XUngrabButton(para1:PDisplay; para2:dword; para3:dword; para4:TWindow):longint;cdecl;external;
{ display  }{ keycode  }{ modifiers  }{ grab_window  }
function XUngrabKey(para1:PDisplay; para2:longint; para3:dword; para4:TWindow):longint;cdecl;external;
{ display  }{ time  }
function XUngrabKeyboard(para1:PDisplay; para2:TTime):longint;cdecl;external;
{ display  }{ time  }
function XUngrabPointer(para1:PDisplay; para2:TTime):longint;cdecl;external;
{ display  }
function XUngrabServer(para1:PDisplay):longint;cdecl;external;
{ display  }{ colormap  }
function XUninstallColormap(para1:PDisplay; para2:TColormap):longint;cdecl;external;
{ display  }{ font  }
function XUnloadFont(para1:PDisplay; para2:TFont):longint;cdecl;external;
{ display  }{ w  }
function XUnmapSubwindows(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }{ w  }
function XUnmapWindow(para1:PDisplay; para2:TWindow):longint;cdecl;external;
{ display  }
function XVendorRelease(para1:PDisplay):longint;cdecl;external;
{ display  }{ src_w  }{ dest_w  }{ src_x  }{ src_y  }{ src_width  }{ src_height  }{ dest_x  }{ dest_y  }
function XWarpPointer(para1:PDisplay; para2:TWindow; para3:TWindow; para4:longint; para5:longint; 
           para6:dword; para7:dword; para8:longint; para9:longint):longint;cdecl;external;
{ screen  }
function XWidthMMOfScreen(para1:PScreen):longint;cdecl;external;
{ screen  }
function XWidthOfScreen(para1:PScreen):longint;cdecl;external;
{ display  }{ w  }{ event_mask  }{ event_return  }
function XWindowEvent(para1:PDisplay; para2:TWindow; para3:longint; para4:PXEvent):longint;cdecl;external;
{ display  }{ filename  }{ bitmap  }{ width  }{ height  }{ x_hot  }{ y_hot  }
function XWriteBitmapFile(para1:PDisplay; para2:Pchar; para3:TPixmap; para4:dword; para5:dword; 
           para6:longint; para7:longint):longint;cdecl;external;
function XSupportsLocale:TBool;cdecl;external;
(* Const before type ignored *)
{ modifier_list  }
function XSetLocaleModifiers(para1:Pchar):Pchar;cdecl;external;
{ display  }{ rdb  }{ res_name  }{ res_class  }
function XOpenOM(para1:PDisplay; para2:PXrmHashBucketRec; para3:Pchar; para4:Pchar):TXOM;cdecl;external;
{ om  }
function XCloseOM(para1:TXOM):TStatus;cdecl;external;
{ om  }function XSetOMValues(para1:TXOM; args:array of const):Pchar;cdecl;external;
function XSetOMValues(para1:TXOM):Pchar;cdecl;external;
{ om  }function XGetOMValues(para1:TXOM; args:array of const):Pchar;cdecl;external;
function XGetOMValues(para1:TXOM):Pchar;cdecl;external;
{ om  }
function XDisplayOfOM(para1:TXOM):PDisplay;cdecl;external;
{ om  }
function XLocaleOfOM(para1:TXOM):Pchar;cdecl;external;
{ om  }function XCreateOC(para1:TXOM; args:array of const):TXOC;cdecl;external;
function XCreateOC(para1:TXOM):TXOC;cdecl;external;
{ oc  }
procedure XDestroyOC(para1:TXOC);cdecl;external;
{ oc  }
function XOMOfOC(para1:TXOC):TXOM;cdecl;external;
{ oc  }function XSetOCValues(para1:TXOC; args:array of const):Pchar;cdecl;external;
function XSetOCValues(para1:TXOC):Pchar;cdecl;external;
{ oc  }function XGetOCValues(para1:TXOC; args:array of const):Pchar;cdecl;external;
function XGetOCValues(para1:TXOC):Pchar;cdecl;external;
{ display  }{ base_font_name_list  }{ missing_charset_list  }{ missing_charset_count  }{ def_string  }
function XCreateFontSet(para1:PDisplay; para2:Pchar; para3:PPPchar; para4:Plongint; para5:PPchar):TXFontSet;cdecl;external;
{ display  }{ font_set  }
procedure XFreeFontSet(para1:PDisplay; para2:TXFontSet);cdecl;external;
{ font_set  }{ font_struct_list  }{ font_name_list  }
function XFontsOfFontSet(para1:TXFontSet; para2:PPPXFontStruct; para3:PPPchar):longint;cdecl;external;
{ font_set  }
function XBaseFontNameListOfFontSet(para1:TXFontSet):Pchar;cdecl;external;
{ font_set  }
function XLocaleOfFontSet(para1:TXFontSet):Pchar;cdecl;external;
{ font_set  }
function XContextDependentDrawing(para1:TXFontSet):TBool;cdecl;external;
{ font_set  }
function XDirectionalDependentDrawing(para1:TXFontSet):TBool;cdecl;external;
{ font_set  }
function XContextualDrawing(para1:TXFontSet):TBool;cdecl;external;
{ font_set  }
function XExtentsOfFontSet(para1:TXFontSet):PXFontSetExtents;cdecl;external;
{ font_set  }{ text  }{ bytes_text  }
function XmbTextEscapement(para1:TXFontSet; para2:Pchar; para3:longint):longint;cdecl;external;
{ font_set  }{ text  }{ num_wchars  }
function XwcTextEscapement(para1:TXFontSet; para2:Pwchar_t; para3:longint):longint;cdecl;external;
{ font_set  }{ text  }{ bytes_text  }
function Xutf8TextEscapement(para1:TXFontSet; para2:Pchar; para3:longint):longint;cdecl;external;
{ font_set  }{ text  }{ bytes_text  }{ overall_ink_return  }{ overall_logical_return  }
function XmbTextExtents(para1:TXFontSet; para2:Pchar; para3:longint; para4:PXRectangle; para5:PXRectangle):longint;cdecl;external;
{ font_set  }{ text  }{ num_wchars  }{ overall_ink_return  }{ overall_logical_return  }
function XwcTextExtents(para1:TXFontSet; para2:Pwchar_t; para3:longint; para4:PXRectangle; para5:PXRectangle):longint;cdecl;external;
{ font_set  }{ text  }{ bytes_text  }{ overall_ink_return  }{ overall_logical_return  }
function Xutf8TextExtents(para1:TXFontSet; para2:Pchar; para3:longint; para4:PXRectangle; para5:PXRectangle):longint;cdecl;external;
{ font_set  }{ text  }{ bytes_text  }{ ink_extents_buffer  }{ logical_extents_buffer  }{ buffer_size  }{ num_chars  }{ overall_ink_return  }{ overall_logical_return  }
function XmbTextPerCharExtents(para1:TXFontSet; para2:Pchar; para3:longint; para4:PXRectangle; para5:PXRectangle; 
           para6:longint; para7:Plongint; para8:PXRectangle; para9:PXRectangle):TStatus;cdecl;external;
{ font_set  }{ text  }{ num_wchars  }{ ink_extents_buffer  }{ logical_extents_buffer  }{ buffer_size  }{ num_chars  }{ overall_ink_return  }{ overall_logical_return  }
function XwcTextPerCharExtents(para1:TXFontSet; para2:Pwchar_t; para3:longint; para4:PXRectangle; para5:PXRectangle; 
           para6:longint; para7:Plongint; para8:PXRectangle; para9:PXRectangle):TStatus;cdecl;external;
{ font_set  }{ text  }{ bytes_text  }{ ink_extents_buffer  }{ logical_extents_buffer  }{ buffer_size  }{ num_chars  }{ overall_ink_return  }{ overall_logical_return  }
function Xutf8TextPerCharExtents(para1:TXFontSet; para2:Pchar; para3:longint; para4:PXRectangle; para5:PXRectangle; 
           para6:longint; para7:Plongint; para8:PXRectangle; para9:PXRectangle):TStatus;cdecl;external;
{ display  }{ d  }{ gc  }{ x  }{ y  }{ text_items  }{ nitems  }
procedure XmbDrawText(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint; 
            para6:PXmbTextItem; para7:longint);cdecl;external;
{ display  }{ d  }{ gc  }{ x  }{ y  }{ text_items  }{ nitems  }
procedure XwcDrawText(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint; 
            para6:PXwcTextItem; para7:longint);cdecl;external;
{ display  }{ d  }{ gc  }{ x  }{ y  }{ text_items  }{ nitems  }
procedure Xutf8DrawText(para1:PDisplay; para2:TDrawable; para3:TGC; para4:longint; para5:longint; 
            para6:PXmbTextItem; para7:longint);cdecl;external;
{ display  }{ d  }{ font_set  }{ gc  }{ x  }{ y  }{ text  }{ bytes_text  }
procedure XmbDrawString(para1:PDisplay; para2:TDrawable; para3:TXFontSet; para4:TGC; para5:longint; 
            para6:longint; para7:Pchar; para8:longint);cdecl;external;
{ display  }{ d  }{ font_set  }{ gc  }{ x  }{ y  }{ text  }{ num_wchars  }
procedure XwcDrawString(para1:PDisplay; para2:TDrawable; para3:TXFontSet; para4:TGC; para5:longint; 
            para6:longint; para7:Pwchar_t; para8:longint);cdecl;external;
{ display  }{ d  }{ font_set  }{ gc  }{ x  }{ y  }{ text  }{ bytes_text  }
procedure Xutf8DrawString(para1:PDisplay; para2:TDrawable; para3:TXFontSet; para4:TGC; para5:longint; 
            para6:longint; para7:Pchar; para8:longint);cdecl;external;
{ display  }{ d  }{ font_set  }{ gc  }{ x  }{ y  }{ text  }{ bytes_text  }
procedure XmbDrawImageString(para1:PDisplay; para2:TDrawable; para3:TXFontSet; para4:TGC; para5:longint; 
            para6:longint; para7:Pchar; para8:longint);cdecl;external;
{ display  }{ d  }{ font_set  }{ gc  }{ x  }{ y  }{ text  }{ num_wchars  }
procedure XwcDrawImageString(para1:PDisplay; para2:TDrawable; para3:TXFontSet; para4:TGC; para5:longint; 
            para6:longint; para7:Pwchar_t; para8:longint);cdecl;external;
{ display  }{ d  }{ font_set  }{ gc  }{ x  }{ y  }{ text  }{ bytes_text  }
procedure Xutf8DrawImageString(para1:PDisplay; para2:TDrawable; para3:TXFontSet; para4:TGC; para5:longint; 
            para6:longint; para7:Pchar; para8:longint);cdecl;external;
{ dpy  }{ rdb  }{ res_name  }{ res_class  }
function XOpenIM(para1:PDisplay; para2:PXrmHashBucketRec; para3:Pchar; para4:Pchar):TXIM;cdecl;external;
{ im  }
function XCloseIM(para1:TXIM):TStatus;cdecl;external;
{ im  }function XGetIMValues(para1:TXIM; args:array of const):Pchar;cdecl;external;
function XGetIMValues(para1:TXIM):Pchar;cdecl;external;
{ im  }function XSetIMValues(para1:TXIM; args:array of const):Pchar;cdecl;external;
function XSetIMValues(para1:TXIM):Pchar;cdecl;external;
{ im  }
function XDisplayOfIM(para1:TXIM):PDisplay;cdecl;external;
{ im }
function XLocaleOfIM(para1:TXIM):Pchar;cdecl;external;
{ im  }function XCreateIC(para1:TXIM; args:array of const):TXIC;cdecl;external;
function XCreateIC(para1:TXIM):TXIC;cdecl;external;
{ ic  }
procedure XDestroyIC(para1:TXIC);cdecl;external;
{ ic  }
procedure XSetICFocus(para1:TXIC);cdecl;external;
{ ic  }
procedure XUnsetICFocus(para1:TXIC);cdecl;external;
{ ic  }
function XwcResetIC(para1:TXIC):Pwchar_t;cdecl;external;
{ ic  }
function XmbResetIC(para1:TXIC):Pchar;cdecl;external;
{ ic  }
function Xutf8ResetIC(para1:TXIC):Pchar;cdecl;external;
{ ic  }function XSetICValues(para1:TXIC; args:array of const):Pchar;cdecl;external;
function XSetICValues(para1:TXIC):Pchar;cdecl;external;
{ ic  }function XGetICValues(para1:TXIC; args:array of const):Pchar;cdecl;external;
function XGetICValues(para1:TXIC):Pchar;cdecl;external;
{ ic  }
function XIMOfIC(para1:TXIC):TXIM;cdecl;external;
{ event  }{ window  }
function XFilterEvent(para1:PXEvent; para2:TWindow):TBool;cdecl;external;
{ ic  }{ event  }{ buffer_return  }{ bytes_buffer  }{ keysym_return  }{ status_return  }
function XmbLookupString(para1:TXIC; para2:PXKeyPressedEvent; para3:Pchar; para4:longint; para5:PKeySym; 
           para6:PStatus):longint;cdecl;external;
{ ic  }{ event  }{ buffer_return  }{ wchars_buffer  }{ keysym_return  }{ status_return  }
function XwcLookupString(para1:TXIC; para2:PXKeyPressedEvent; para3:Pwchar_t; para4:longint; para5:PKeySym; 
           para6:PStatus):longint;cdecl;external;
{ ic  }{ event  }{ buffer_return  }{ bytes_buffer  }{ keysym_return  }{ status_return  }
